--- a/event.html
+++ b/event.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "competition.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "event.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Competition</title>
+  <title>Event</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
-  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=3758937052" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4063134533"/>
+  <link rel="stylesheet" type="text/css" href="css/event.css?crc=4160663908" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -27,15 +27,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu2056"><!-- group -->
-     <div class="grpelem" id="u2056"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <div class="grpelem" id="u847"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu847"><!-- column -->
+    <div class="colelem" id="u847"><!-- content -->
+     <div class="fluid_height_spacer"></div>
+    </div>
+    <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content -->
       <div class="fluid_height_spacer"></div>
      </div>
@@ -49,10 +46,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="event.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="МЕРОПРИЯТИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
-     <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
+    </div>
+   </div>
+   <div id="u38868"><!-- state-based BG images -->
+    <img alt="+Добавить мероприятия" src="images/blank.gif?crc=4208392903"/>
+    <div class="fluid_height_spacer"></div>
+   </div>
+   <div class="clearfix grpelem" id="pu1063-7"><!-- column -->
+    <img class="colelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
+    <div class="clearfix colelem" id="pu2056"><!-- group -->
+     <div class="grpelem" id="u2056"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
       <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
@@ -95,16 +103,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="526" data-content-above-spacer="525" data-content-below-spacer="60"></div>
    </div>
+   <div class="verticalspacer" data-offset-top="526" data-content-above-spacer="525" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=3797576106" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=3901334585" alt=""/>
+   <img class="preload" src="images/u38868-r.png?crc=4188744169" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
    <img class="preload" src="images/u38425-r.png?crc=71748046" alt=""/>
