--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News/page/1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=244891556" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4063134533"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=102283232" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -46,7 +46,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="event.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="МЕРОПРИЯТИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
     </div>
@@ -197,8 +197,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=3797576106" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=3901334585" alt=""/>
    <img class="preload" src="images/u38864_states-r.png?crc=420436925" alt=""/>
    <img class="preload" src="images/u35820-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=316806109" alt=""/>
