--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News/page/1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4063134533"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=102283232" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4271144613"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4217961667" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -38,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
@@ -48,10 +48,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="event.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="МЕРОПРИЯТИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
      </nav>
     </div>
    </div>
-   <a class="nonblock nontext" id="u38864" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u38864_states"><img alt="+Добавить новость" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext" id="u38864" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u38864_states"><img alt="+" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <div class="clearfix grpelem" id="pu1063-7"><!-- column -->
     <img class="colelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
     <div class="SlideShowWidget clearfix colelem" id="slideshowu38498"><!-- none box -->
@@ -101,6 +104,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
+    <div class="clearfix colelem" id="pu35887"><!-- group -->
+     <div class="grpelem" id="u35887"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="grpelem" id="u35886"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="clip_frame grpelem" id="u35882"><!-- image -->
+      <img class="block" id="u35882_img" src="images/untitled_by_elgama-d5hhapn-crop-u35882.jpg?crc=47024588" alt="" data-image-width="548" data-image-height="233"/>
+     </div>
+     <div class="grpelem" id="u35885"><!-- state-based BG images -->
+      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
+      <div class="fluid_height_spacer"></div>
+     </div>
+    </div>
    </div>
    <div class="clearfix grpelem" id="pmenuu36157"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36157"><!-- horizontal box -->
@@ -128,7 +146,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <img class="grpelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+   <div class="clearfix grpelem" id="pu35822-4"><!-- column -->
+    <img class="colelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+    <img class="colelem" id="u35888-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35888-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+   </div>
    <div class="clearfix grpelem" id="pmenuu36189"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36189"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36190"><!-- vertical box -->
@@ -140,19 +161,28 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36201" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36203" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36205"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36206"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36209" href="newspage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36210-4"><!-- content --><p>&gt;</p></div></a>
+   </div>
+   <nav class="MenuBar clearfix" id="menuu36205"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u36206"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36209" href="newspage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36210-4"><!-- content --><p>&gt;</p></div></a>
+    </div>
+   </nav>
+   <div class="clearfix grpelem" id="pmenuu35809"><!-- column -->
+    <nav class="MenuBar clearfix colelem" id="menuu35809"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
+       <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+      </div>
+     </div>
+    </nav>
+    <nav class="MenuBar clearfix colelem" id="menuu35874"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u35875"><!-- vertical box -->
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35876"><!-- horizontal box -->
+       <img class="MenuItemLabel NoWrap grpelem" id="u35879" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+      </div>
      </div>
     </nav>
    </div>
-   <nav class="MenuBar clearfix grpelem" id="menuu35809"><!-- horizontal box -->
-    <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
-      <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-     </div>
-    </div>
-   </nav>
    <div class="clearfix grpelem" id="ppu2056"><!-- column -->
     <div class="clearfix colelem" id="pu2056"><!-- group -->
      <div class="grpelem" id="u2056"><!-- content -->
@@ -177,6 +207,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
     </div>
     <img class="colelem" id="u35819-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u35819-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
+    <img class="colelem" id="u35884-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u35884-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
    </div>
    <div id="u35596-wrapper">
     <a class="nonblock nontext anim_swing" id="u35596" href="index.html#werh"><!-- simple frame --></a>
@@ -190,17 +221,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div id="u35655-4-wrapper">
     <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="865" data-content-above-spacer="918" data-content-below-spacer="59"></div>
+   <div class="verticalspacer" data-offset-top="1215" data-content-above-spacer="1267" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3797576106" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=3901334585" alt=""/>
-   <img class="preload" src="images/u38864_states-r.png?crc=420436925" alt=""/>
+   <img class="preload" src="images/u39211-r.png?crc=3987155826" alt=""/>
+   <img class="preload" src="images/u39211-a.png?crc=3875418341" alt=""/>
+   <img class="preload" src="images/u38864_states-r.png?crc=3846867839" alt=""/>
    <img class="preload" src="images/u35820-r.png?crc=522824681" alt=""/>
+   <img class="preload" src="images/u35885-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36180-a.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36188-r.png?crc=293193988" alt=""/>
@@ -210,6 +244,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u36203-r.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u36203-a.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u35815-r.png?crc=71748046" alt=""/>
+   <img class="preload" src="images/u35879-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
   </div>
