--- a/newspage6.html
+++ b/newspage6.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News/page/6</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4063134533"/>
-  <link rel="stylesheet" type="text/css" href="css/newspage6.css?crc=3940762515" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4271144613"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage6.css?crc=211967161" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
@@ -50,6 +50,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="event.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="МЕРОПРИЯТИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
     </div>
@@ -128,12 +131,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3797576106" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=3901334585" alt=""/>
+   <img class="preload" src="images/u39211-r.png?crc=3987155826" alt=""/>
+   <img class="preload" src="images/u39211-a.png?crc=3875418341" alt=""/>
    <img class="preload" src="images/u37030-r.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u37030-a.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u37044-r.png?crc=3761878106" alt=""/>
