--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u1061"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u1062"><!-- vertical box -->
-          <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></div></li>
+          <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></a></li>
          </ul>
         </div>
        </div>
@@ -157,11 +157,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u1062"><!-- vertical box -->
           <div class="position_content" id="u1062_position_content">
            <div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u48555"><!-- horizontal box -->
-            <div class="MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" data-orig-id="u48557"><!-- horizontal box -->
-             <div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u48561-4"><!-- content -->
-              <span class="placeholder" data-placeholder-for="u48561-4_0_content"><!-- placeholder node --></span>
-             </div>
-            </div>
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="https://www.thingiverse.com/krista_konstantin/designs" data-orig-id="u48557"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u48561-4"><!-- content --><span class="placeholder" data-placeholder-for="u48561-4_0_content"><!-- placeholder node --></span></div></a>
            </div>
           </div>
          </div>
