--- a/галерея.html
+++ b/галерея.html
@@ -55,7 +55,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u1061"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u1062"><!-- vertical box -->
-          <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></div></li>
+          <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></a></li>
          </ul>
         </div>
        </div>
@@ -73,7 +73,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem" id="pu47385"><!-- group -->
       <div class="clearfix grpelem" id="u47385"><!-- group -->
        <div class="clip_frame grpelem" id="u47362"><!-- image -->
-        <img class="block temp_no_img_src" id="u47362_img" data-orig-src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%201160x542-crop-u47362.jpg?crc=140410551" alt="" width="433" height="295" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u47362_img" data-orig-src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%201160x542-crop-u47362.jpg?crc=3969484919" alt="" width="433" height="295" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
       <div class="clearfix grpelem" id="u47373"><!-- group -->
@@ -120,11 +120,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u1062"><!-- vertical box -->
           <div class="position_content" id="u1062_position_content">
            <div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u48555"><!-- horizontal box -->
-            <div class="MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" data-orig-id="u48557"><!-- horizontal box -->
-             <div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u48561-4"><!-- content -->
-              <span class="placeholder" data-placeholder-for="u48561-4_0_content"><!-- placeholder node --></span>
-             </div>
-            </div>
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="https://www.thingiverse.com/krista_konstantin/designs" data-orig-id="u48557"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u48561-4"><!-- content --><span class="placeholder" data-placeholder-for="u48561-4_0_content"><!-- placeholder node --></span></div></a>
            </div>
           </div>
          </div>
