--- a/3d.html
+++ b/3d.html
@@ -50,7 +50,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="gallery.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       <div class="SubMenu MenuLevel1 clearfix" id="u1061"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u1062"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></a></li>
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="%d0%ba%d0%be%d0%bd%d1%82%d0%b0%d0%ba%d1%82%d1%8b.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <img class="grpelem temp_no_img_src shared_content" id="u1063-4" alt="3D" width="109" height="126" data-orig-src="images/u1063-4.png?crc=171382441" src="images/blank.gif?crc=4208392903" data-content-guid="u1063-4_content"/><!-- rasterized frame -->
@@ -95,7 +95,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u1056"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html" data-orig-id="u1057"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Галерея" src="images/blank.gif?crc=4208392903" data-orig-id="u1060"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="gallery.html" data-orig-id="u1057"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Галерея" src="images/blank.gif?crc=4208392903" data-orig-id="u1060"/><!-- state-based BG images --></a>
       <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u1061"><!-- vertical box -->
        <div class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u1062"><!-- vertical box -->
         <div class="position_content" id="u1062_position_content">
@@ -107,7 +107,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u39206"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="%d0%ba%d0%be%d0%bd%d1%82%d0%b0%d0%ba%d1%82%d1%8b.html" data-orig-id="u39209"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Контакты" src="images/blank.gif?crc=4208392903" data-orig-id="u39211"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u39209"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Контакты" src="images/blank.gif?crc=4208392903" data-orig-id="u39211"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <span class="grpelem placeholder" data-placeholder-for="u1063-4_content"><!-- placeholder node --></span>
