--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Главная</title>
+  <title>Main</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3855846986"/>
@@ -69,7 +69,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="gallery.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u1061"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u1062"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u48555"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u48557" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u48561-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u48561-4_0_content">Thingiverse.com</p></div></a></li>
@@ -77,7 +77,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="%d0%ba%d0%be%d0%bd%d1%82%d0%b0%d0%ba%d1%82%d1%8b.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="contacts.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
        </div>
       </nav>
       <img class="grpelem temp_no_img_src" id="u1063-4" alt="3D" data-orig-src="images/u1063-4.png?crc=171382441" data-image-width="136" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
@@ -152,7 +152,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u1056"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="%d0%b3%d0%b0%d0%bb%d0%b5%d1%80%d0%b5%d1%8f.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u1057"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Галерея" src="images/blank.gif?crc=4208392903" data-orig-id="u1060"/><!-- state-based BG images --></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="gallery.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u1057"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Галерея" src="images/blank.gif?crc=4208392903" data-orig-id="u1060"/><!-- state-based BG images --></a>
         <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u1061"><!-- vertical box -->
          <div class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u1062"><!-- vertical box -->
           <div class="position_content" id="u1062_position_content">
@@ -164,7 +164,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u39206"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="%d0%ba%d0%be%d0%bd%d1%82%d0%b0%d0%ba%d1%82%d1%8b.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u39209"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Контакты" src="images/blank.gif?crc=4208392903" data-orig-id="u39211"/><!-- state-based BG images --></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u39209"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem temp_no_id" alt="Контакты" src="images/blank.gif?crc=4208392903" data-orig-id="u39211"/><!-- state-based BG images --></a>
        </div>
       </nav>
       <img class="grpelem temp_no_id temp_no_img_src" alt="3D" data-orig-src="images/u1063-4.png?crc=171382441" data-image-width="109" data-orig-id="u1063-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
