--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3862345732" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=337611984" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -101,6 +101,54 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="clearfix colelem" id="pu39292"><!-- group -->
+     <div class="grpelem" id="u39292"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="grpelem" id="u39293"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu39294" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u39295"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u39296" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u39298" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+       </div>
+      </div>
+     </nav>
+     <div class="clip_frame grpelem" id="u39302"><!-- image -->
+      <img class="block" id="u39302_img" src="images/untitled_by_elgama-d5hhapn-crop-u39302.jpg?crc=4141765436" alt="" data-heightwidthratio="0.4251824817518248" data-image-width="548" data-image-height="233"/>
+     </div>
+     <img class="grpelem" id="u39304-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u39304-4.png?crc=221310515" data-image-width="146"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39305-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u39305-4.png?crc=4139330446" data-image-width="274"/><!-- rasterized frame -->
+     <div class="grpelem" id="u39306"><!-- state-based BG images -->
+      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
+      <div class="fluid_height_spacer"></div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu39384"><!-- group -->
+     <div class="grpelem" id="u39384"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="grpelem" id="u39385"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu39386" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u39387"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u39388" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u39390" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+       </div>
+      </div>
+     </nav>
+     <div class="clip_frame grpelem" id="u39394"><!-- image -->
+      <img class="block" id="u39394_img" src="images/untitled_by_elgama-d5hhapn-crop-u39394.jpg?crc=4141765436" alt="" data-heightwidthratio="0.4251824817518248" data-image-width="548" data-image-height="233"/>
+     </div>
+     <img class="grpelem" id="u39396-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u39396-4.png?crc=221310515" data-image-width="146"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39397-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u39397-4.png?crc=4139330446" data-image-width="274"/><!-- rasterized frame -->
+     <div class="grpelem" id="u39398"><!-- state-based BG images -->
+      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
+      <div class="fluid_height_spacer"></div>
+     </div>
+    </div>
     <a class="nonblock nontext pinned-colelem" id="u38864" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u38864_states"><img alt="+" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    </div>
    <div class="clearfix grpelem" id="pu35596"><!-- group -->
@@ -170,7 +218,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1215" data-content-above-spacer="10603" data-content-below-spacer="59" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1231" data-content-above-spacer="10603" data-content-below-spacer="59" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=3971789501" alt=""/>
@@ -183,6 +231,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u39211-a.png?crc=4239729737" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=484164113" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=330121899" alt=""/>
+   <img class="preload" src="images/u39298-r.png?crc=3777811593" alt=""/>
+   <img class="preload" src="images/u39306-r.png?crc=355228694" alt=""/>
+   <img class="preload" src="images/u39390-r.png?crc=3777811593" alt=""/>
+   <img class="preload" src="images/u39398-r.png?crc=355228694" alt=""/>
    <img class="preload" src="images/u38864_states-r.png?crc=4245954757" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=4101855078" alt=""/>
    <img class="preload" src="images/u36180-a.png?crc=4101855078" alt=""/>
