--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=395648720" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=223477364" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -70,7 +70,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="grpelem" id="u39253-4" alt="В ПИНСКЕ" src="images/u39253-4.png?crc=368077745" data-image-width="356"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="u39289"><!-- group -->
-     <img class="grpelem" id="u39286-4" alt="Профиль на hingiverse.com" src="images/u39286-4.png?crc=4227557873" data-image-width="570"/><!-- rasterized frame -->
+     <a class="nonblock nontext grpelem" id="u39286-4" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- rasterized frame --><img id="u39286-4_img" alt="Профиль на hingiverse.com" src="images/u39286-4.png?crc=4227557873" data-image-width="570"/></a>
     </div>
     <div class="clearfix colelem" id="pu38420"><!-- group -->
      <div class="grpelem" id="u38420"><!-- content -->
