--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=223477364" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=384014127" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -69,8 +69,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
      <img class="grpelem" id="u39253-4" alt="В ПИНСКЕ" src="images/u39253-4.png?crc=368077745" data-image-width="356"/><!-- rasterized frame -->
     </div>
-    <div class="clearfix colelem" id="u39289"><!-- group -->
-     <a class="nonblock nontext grpelem" id="u39286-4" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- rasterized frame --><img id="u39286-4_img" alt="Профиль на hingiverse.com" src="images/u39286-4.png?crc=4227557873" data-image-width="570"/></a>
+    <div class="clearfix colelem" id="pu39289"><!-- group -->
+     <div class="grpelem" id="u39289"><!-- simple frame --></div>
+     <a class="nonblock nontext grpelem" id="u39286" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- state-based BG images --><div id="u39286_states"><img alt="Профиль на hingiverse.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
     </div>
     <div class="clearfix colelem" id="pu38420"><!-- group -->
      <div class="grpelem" id="u38420"><!-- content -->
@@ -111,6 +112,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u39211-a.png?crc=4239729737" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=484164113" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=330121899" alt=""/>
+   <img class="preload" src="images/u39286_states-r.png?crc=4292012625" alt=""/>
    <img class="preload" src="images/u38425-r.png?crc=3777811593" alt=""/>
    <img class="preload" src="images/u38434-r.png?crc=355228694" alt=""/>
    <img class="preload" src="images/u39230_states-r.png?crc=4245954757" alt=""/>
